dev/kustomize/idm/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openidm
  name: openidm
spec:
  ports:
  - name: openidm
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: openidm
  type: ClusterIP
