dev/kustomize/idm/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT,GET,POST,HEAD,PATCH,DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "authorization,x-requested-with,cache-control,content-type,x-openidm-nosession,x-openidm-password,x-openidm-username,if-match,if-none-match"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "false"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Expose-Headers: WWW-Authenticate";
  labels:
    app: openidm
  name: openidm
spec:
  rules:
  - host: default.iam.forgeops.com
    http:
      paths:
      - backend:
          serviceName: openidm
          servicePort: 80
        path: /openidm
      - backend:
          serviceName: openidm
          servicePort: 80
        path: /idm
      - backend:
          serviceName: openidm
          servicePort: 80
        path: /admin
  tls:
  - hosts:
    - default.iam.forgeops.com
    secretName: default.iam.forgeops.com
